alignment issue

--- a/src/components/Header/Placement.css
+++ b/src/components/Header/Placement.css
@@ -102,8 +102,4 @@
     margin-left: 20px;
   }
 
-  .heading {
-    font-size: 37.96px;
-    left: 10px;
-  }
 }
