--- a/src/components/Main/Skills.css
+++ b/src/components/Main/Skills.css
@@ -15,12 +15,6 @@
     gap: 20px;
 }
 
-.skill {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 @media (max-width: 768px) {
     .skills-heading {
         font-size: 45px;
@@ -30,10 +24,5 @@
 
     .skills-items {
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(5, 1fr);
-    }
-
-    .skill {
-        row-gap: 35px;
     }
 }
